# tx-generator

./: .gitignore  README.md  app.ipynb  app_case_gen.ipynb  app_case_gen_main.ipynb  app_case_gen_parser.ipynb  app_case_gen_parser_v2.ipynb  app_case_gen_setup.ipynb  app_case_generate.ipynb  app_case_parser.ipynb  app_converter.ipynb  app_planner.ipynb  app_replanner.ipynb  app_simulator.ipynb  app_tools.ipynb  app_tx_gen.ipynb  app_tx_simulation.ipynb  case_gen.ipynb  pyproject.toml
abi/: erc20.json  uniswap_v2_router.json
case/: case_loader.py  case_retriever.py  parser.py  step_parser.py
case_code/: __init__.py  code_converter.py  code_downloader.py  code_loader.py  code_transformer.py  conversion_evaluator.py
graph/: __init__.py  assistant.py  converter_llm.py  converter_tool.py  planner.py  replanner.py  state.py
graph/tools/: __init__.py  abi.py  address.py  batch.py  chain.py  ens.py  protocol.py  protocols.py  simulation.py  test.py  time.py  token.py  utils.py
model/: case.py  tx.py
models/: __init__.py  case.py  tx_params.py
utils/: model_selector.py
